cabal-version:      3.0
name:               riverhs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Lqnk4
maintainer:         internalbeast109@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules: Riverctl
    build-depends:
        base ^>=4.17.2.1,
        process >= 1.6.25.0
    hs-source-dirs:  src
    default-language: Haskell2010


executable riverhs
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        riverhs
    hs-source-dirs:   app
    default-language: Haskell2010
